# ChangeLog for virtual/perl-Pod-Simple
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Pod-Simple/ChangeLog,v 1.2 2008/11/02 11:05:00 swegener Exp $

*perl-Pod-Simple-3.07 (01 Nov 2008)
*perl-Pod-Simple-3.05 (01 Nov 2008)

  01 Nov 2008; Yuval Yaari <yuval@gentoo.org> +metadata.xml,
  +perl-Pod-Simple-3.05.ebuild, +perl-Pod-Simple-3.07.ebuild:
  Adding virtuals for dual-lifed modules that come with perl-5.10
