@@ -1,3 +1,4 @@
 EBUILD perl-Pod-Simple-3.07.ebuild 490 RMD160 8e5283da19a56c3c0105ea4c5d6643e563111ec6 SHA1 46af8614e5e1a3766bc8f9a660aa403c3db0b12f SHA256 0a07f9cc457ddf006fce35362cde0b990830efbd7f9f751e82636227d61be0b0
-MISC ChangeLog 484 RMD160 de5f248f79e96a31adae43057cc69d6a6e5d59fc SHA1 363d9011bdd0ce32fb4df4cbce385e3c7272f9b0 SHA256 59ba36499b721bf7eb370729af93afb062b1aa9b731fb1962dd20e230db0ffa5
+EBUILD perl-Pod-Simple-3.08.ebuild 474 RMD160 1b8bd587bb2aaed858ff0e409c4a8222ec905c3b SHA1 5d83047e7b5c1dbcb8c934fdd518478f51ec667e SHA256 08efa74312b0e1448b20f7eb521c8f4d6afaa1513723866ab4331cf0e46b5621
+MISC ChangeLog 613 RMD160 97f8f1c40043e6b564c9efb514b4065ea7d2ecf8 SHA1 a2bac85fff728b1efb5ca446d9103552fb469268 SHA256 1454545f276294da05670c5fa8bd869b310abeaefb3a8eb8f1da7094d8214211
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
