@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Pod-Simple
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Pod-Simple/ChangeLog,v 1.2 2008/11/02 11:05:00 swegener Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Pod-Simple/ChangeLog,v 1.3 2009/07/18 08:19:25 tove Exp $
+
+*perl-Pod-Simple-3.08 (18 Jul 2009)
+
+  18 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Pod-Simple-3.08.ebuild:
+  Version bump
 
 *perl-Pod-Simple-3.07 (01 Nov 2008)
 *perl-Pod-Simple-3.05 (01 Nov 2008)
